OpenJMLTest/releaseTests/testPath4/expected
../testfiles/testPath/data/TestPath.java:1: error: cannot find symbol
public class TestPath extends TestPathS {
                              ^
  symbol: class TestPathS
../testfiles/testPath/data-specs/TestPath.jml:3: error: cannot find symbol
    //@ requires q; // BAD
                 ^
  symbol:   variable q
  location: class TestPath
Note: $SPECS/java5/java/util/Arrays.jml uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
